# gcrates

./: .gitignore  Cargo.toml  DOCS.md  README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: GlobalGraphApp.svelte  gcrates.d.ts  global-renderer.ts  global.css  main.ts
src/: download.rs  format.rs  graph.rs  lib.rs  main.rs  wasm.rs
